<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="@dimen/len_4"
    android:layout_marginTop="@dimen/len_10"
    android:layout_marginEnd="@dimen/len_10"
    android:background="@drawable/bg_item_elite"
    android:orientation="vertical">

    <com.xana.acg.com.widget.RoundImageView
        android:id="@+id/iv_img"
        android:layout_width="match_parent"
        android:layout_height="@dimen/len_256"
        android:adjustViewBounds="true"
        android:foreground="@drawable/ic_touch_fg"
        android:scaleType="fitXY"
        android:src="@drawable/bg_loading"
        app:left_top_radius="@dimen/len_6"
        app:right_top_radius="@dimen/len_6" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="vertical"
        android:padding="@dimen/len_10">

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:maxLines="2"
            android:text="@string/label_tips"
            android:textColor="@color/black"
            android:textSize="@dimen/font_12"
            tools:ignore="UnusedAttribute" />

        <TextView
            android:id="@+id/tv_tag"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/len_10"
            android:ellipsize="end"
            android:maxLines="1"
            android:text="@string/label_nickname"
            android:textColor="@color/black_alpha_128"
            android:textSize="@dimen/font_12" />

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/len_10">

            <com.xana.acg.com.widget.PortraitView
                android:id="@+id/pv_portrait"
                android:layout_width="@dimen/len_18"
                android:layout_height="@dimen/len_18"
                android:layout_gravity="center_vertical"
                android:src="@drawable/ic_my" />

            <TextView
                android:id="@+id/tv_nickname"
                android:layout_width="@dimen/len_68"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="@dimen/len_20"
                android:ellipsize="end"
                android:maxLines="1"
                android:text="@string/label_nickname"
                android:textColor="@color/grey"
                android:textSize="@dimen/font_10" />

            <TextView
                android:id="@+id/tv_thumb"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end|center_vertical"
                android:text="@string/data_times"
                android:textColor="@color/grey"
                android:textSize="@dimen/font_10" />
        </FrameLayout>
    </LinearLayout>
</LinearLayout>